[package]
name = "tauri_test"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_test_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
polars = { version = "0.46.0", features = ["polars-io", "replace"] }
polars_excel_writer = "0.13.0"
calamine = { version = "0.26.1", features = ["dates"] }
anyhow = "1.0.97"
rust_xlsxwriter = "0.84.0"
tempfile = "3.19.1"
chrono = "0.4.40"
