[package]
name = "tauri_test"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_test_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "^2", features = ["protocol-asset"] }
tauri-plugin-opener = "^2"
tauri-plugin-dialog = "^2"
tauri-plugin-fs = "^2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
polars = { version = "0.46.0", features = ["polars-io", "replace", "lazy"] }
polars_excel_writer = "0.14.0"
calamine = { git = "https://github.com/prophittcorey/calamine", branch = "fix/zip-3.0", features = [
    "dates",
] }
anyhow = "1.0.98"
rust_xlsxwriter = "0.84.0"
tempfile = "3.20.0"
chrono = "0.4.41"
zip = "4.0.0"
